# OnionRooter

./: .gitattributes  .gitignore  CAHIER_DES_CHARGES.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  build.cmd
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
companion/: Cargo.toml  build.rs
companion/src/: auth_store.rs  client_auth.rs  main.rs  messaging.rs  proxy.rs  runtime.rs  tor_detector.rs  tor_manager.rs  tor_update.rs  tray.rs  update_check.rs
docs/: AMO-listing.md  TECHNICAL.md  onionrouter-signing-key.asc
extension/: authorized.css  authorized.html  authorized.js  background.js  diagnostics.css  diagnostics.html  diagnostics.js  manifest.json  popup.css  popup.html  popup.js  unlock.css  unlock.html  unlock.js
installer/: README.md  build.ps1  com.onionrouter.companion.json.template
installer/linux/: build-deb.sh  register-dev.sh
installer/windows/: onionrouter.nsi  register-dev.ps1  setup-defender-exclusion.ps1
mockups/: onion-auth-dedicated.html  onion-auth-popup.html
