[package]
name = "onionrouter-companion"
version = "0.1.2"
edition = "2021"
description = "Native Messaging companion for the OnionRouter Firefox extension"
license = "MIT"
authors = ["Louis COURRIAN <louis.courrian@gmail.com>"]
repository = "https://github.com/LouisCourrian/OnionRooter"

[[bin]]
name = "onionrouter-companion"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "net", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
dirs = "5"
flate2 = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
