[package]
name = "onionrouter-companion"
version = "0.5.1"
edition = "2021"
description = "Native Messaging companion for the OnionRouter Firefox extension"
license = "MIT"
authors = ["Louis COURRIAN <louis.courrian@gmail.com>"]
repository = "https://github.com/LouisCourrian/OnionRooter"

[[bin]]
name = "onionrouter-companion"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "net", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "socks", "json"], default-features = false }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
data-encoding = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
anyhow = "1"
thiserror = "1"
dirs = "5"
flate2 = "1"
tar = "0.4"
pgp = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "handleapi", "winnt", "dpapi", "wincrypt"] }
tray-item = "0.10"
webbrowser = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
